# nbody-playground

./: Cargo.toml
src/: main.rs  simulation.rs  trails.rs
