[package]
name = "nbody1"
version = "0.1.0"
edition = "2021"

[dependencies]
#bevy = { git = "https://github.com/JMS55/bevy", branch = "bloom-transparent-fix", default-features = false, features = ["bevy_winit", "bevy_core_pipeline", "bevy_asset", "bevy_render", "bevy_sprite", "hdr", "bevy_text", "x11", "dynamic_linking"] }
bevy = { path = "bevy", default-features = false, features = ["bevy_winit", "bevy_core_pipeline", "bevy_asset", "bevy_render", "bevy_sprite", "hdr", "bevy_text", "x11", "dynamic_linking"] }
bevy_framepace = "*"
turborand = "*"
ringbuffer = "*"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3